# relais

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  rustfmt.toml  vite.config.ts
.github/workflows/: main.yaml
crates/conf/: Cargo.toml
crates/conf-derive/: Cargo.toml
crates/conf-derive/src/: lib.rs
crates/conf/src/: app_config.rs  lib.rs
crates/conf/src/app_config/: builder.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs  tests.rs
crates/derive/src/tests/: test_macro.rs
crates/derive/tests/: test_macro.rs
crates/derive_util/: Cargo.toml
crates/derive_util/src/: lib.rs
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: all.json  ctrl.json  default.json  view.json  window.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  conf.rs  lib.rs  main.rs  util.rs  view.rs  window.rs
src-tauri/src/platform/: twitch.rs
src-tauri/src/util/: data.rs  panic.rs  state.rs
src-tauri/src/view/: command.rs  ctrl.rs  event.rs  extension.rs  init.js  util.rs
src-tauri/src/view/ctrl/: ignore_cursor_events.rs  pin.rs  transparent.rs  user_agent.rs
src-tauri/src/window/: command.rs  init.js  util.rs
src-tauri/tests/: app_test.rs  dialog_test.rs
src/lib/: auto-imports.ts  style.scss
src/lib/components/: Template.svelte
src/lib/stores/: state.ts
src/lib/util/: clipboard.ts  wrap.ts
src/lib/util/drag/: Widget.svelte  drag.ts
src/routes/: +layout.svelte  +page.server.ts  +page.svelte
src/routes/config/: +page.svelte
src/routes/ctrl/: +page.svelte
