[workspace]
members = ["src-tauri", "crates/*"]
resolver = "2"

[workspace.dependencies]
conf = { path = "crates/conf" }
derive = { path = "crates/derive" }
derive_util = { path = "crates/derive_util" }

anyhow = "1.0.86"
serde = "1.0"
serde_json = "1.0"
syn = "2.0.77"
tokio = "1.40.0"
toml = "0.8.19"
toml_edit = "0.22.20"
