[workspace]
members = ["src-tauri", "crates/*"]
resolver = "2"

[workspace.package]
authors = ["monax-owo"]
edition = "2021"
license = ""
repository = ""
rust-version = "1.80"
version = "0.1.0"

[workspace.dependencies]
conf = { path = "crates/conf" }
derive = { path = "crates/derive" }
derive_util = { path = "crates/derive_util" }

anyhow = "1.0.86"
serde = "1.0"
serde_json = "1.0"
serial_test = "3.1.1"
syn = "2.0.77"
# tokio = "1.40.0"
toml = "0.8.19"
