[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
authors = ["monax-owo"]
edition = "2021"
license = ""
repository = ""
rust-version = "1.80"
version = "0.1.0"

[workspace.dependencies]
configu = "^0"

anyhow = "^1.0.89"
serde = "^1.0"
# serde_json = "1.0"
serial_test = "^3.1.1"
syn = "^2.0.79"
# tokio = "1.40.0"
toml = "^0.8.19"
