[package]
name = "app"
version = "0.1.0"
description = "Relais"
authors = ["monax-owo"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
config = { version = "0.14.0", features = ["toml"] }
percent-encoding = "2.3.1"
reqwest = "0.11.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = "=2.0.0-rc.20"
specta-typescript = "0.0.7"
tauri = { version = "=2.0.0-rc.3", features = [
  "tray-icon",
  "specta",
  "image",
  "image-png",
  "image-ico",
] }
tauri-plugin-dialog = "2.0.0-rc"
tauri-specta = { version = "=2.0.0-rc.17", features = ["derive", "typescript"] }
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }
webview2-com = "0.33.0"
windows = { version = "0.58.0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
